[gd_scene load_steps=4 format=3 uid="uid://b6gqhy6tagrdu"]

[ext_resource type="Script" path="res://scenses/pipes/Pipes.gd" id="1_mn0me"]
[ext_resource type="PackedScene" uid="uid://coi3ep8sqdcqp" path="res://scenses/pipes/Laser.tscn" id="1_ohty5"]
[ext_resource type="PackedScene" uid="uid://ccg0agtk1w20u" path="res://scenses/pipes/Pipe.tscn" id="2_h56lq"]

[node name="Pipes" type="Node2D" groups=["pipes"]]
script = ExtResource("1_mn0me")

[node name="Laser" parent="." instance=ExtResource("1_ohty5")]

[node name="UpperPipe" parent="." instance=ExtResource("2_h56lq")]
position = Vector2(0, -80)
rotation = -3.14159

[node name="LowerPipe" parent="." instance=ExtResource("2_h56lq")]
position = Vector2(0, 80)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(184, 0)

[connection signal="body_exited" from="Laser" to="." method="_on_laser_body_exited"]
[connection signal="body_entered" from="UpperPipe" to="." method="_on_pipe_body_entered"]
[connection signal="body_entered" from="LowerPipe" to="." method="_on_pipe_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_screen_exited"]
